# SpinChainED

./: .gitignore  CMakeLists.txt  README.md  constants.h  dataGenerators.cpp  dataGenerators.h  diagonalizationMethods.cpp  diagonalizationMethods.h  excFitErrorPlots.py  hamiltonianBuilders.cpp  hamiltonianBuilders.h  helperFunctions.cpp  helperFunctions.h  magnetizationHamiltonian.cpp  magnetizationHamiltonian.h  main.cpp  main.h  momentumHamiltonian.cpp  momentumHamiltonian.h  naiveHamiltonian.cpp  naiveHamiltonian.h  parityHamiltonian.cpp  parityHamiltonian.h  plotting.py  run.sh  shanksTransformGap.py  spinGapFit.py  test.py  thermodynamics.cpp  thermodynamics.h
src/: CMakeLists.txt  dataGenerators.cpp  dataGenerators.h  diagonalizationMethods.cpp  diagonalizationMethods.h  helperFunctions.cpp  helperFunctions.h  main.cpp  main.h  momentumHamiltonian.cpp  momentumHamiltonian.h  parityHamiltonian.cpp  parityHamiltonian.h  plotting.py  spinInversion2.cpp  spinInversion2.h  spinInversionHamiltonian.cpp  spinInversionHamiltonian.h
src/DQT/: CMakeLists.txt  DataGenerators_DQT.cpp  dataGenerators_DQT.cpp  dataGenerators_DQT.h  magnetizationHamiltonian_sparse.cpp  magnetizationHamiltonian_sparse.h  matrixExpIteration.cpp  matrixExpIteration.h  momentumHamiltonian_sparse.cpp  momentumHamiltonian_sparse.h  naiveHamiltonian_sparse.cpp  naiveHamiltonian_sparse.h
src/ED/: CMakeLists.txt  dataGenerators.cpp  dataGenerators.h  diagonalizationMethods.h  helperFunctions.cpp  helperFunctions.h  magnetizationHamiltonian.h  naiveHamiltonian.h  parityHamiltonian.cpp  spinInversionHamiltonian.h  thermodynamics.cpp  thermodynamics.h
